# Navigation_2019

./: .gitignore  LICENSE  README.md  controller_relay_node.cpp
ARES_Test_Driver/: ARES_Test_Driver.ino
ARES_Test_Driver_2/: ARES_Test_Driver_2.ino
TX2/ARES_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
TX2/ARES_ws/devel/include/inertial_sense/: FirmwareUpdateRequest.h  FirmwareUpdateResponse.h  GNSSEphemeris.h  GNSSObservation.h  GPS.h  GPSInfo.h  GTime.h  GlonassEphemeris.h  PreIntIMU.h  RTKInfo.h  RTKRel.h  SatInfo.h
TX2/ARES_ws/devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h  base_d400_paramsConfig.h  rs415_paramsConfig.h  rs435_paramsConfig.h  sr300_paramsConfig.h
TX2/ARES_ws/devel/lib/data_logger/: data_logger_node
TX2/ARES_ws/devel/lib/inertial_sense/: inertial_sense_node
TX2/ARES_ws/devel/lib/ins_to_tf/: ins_to_tf_node
TX2/ARES_ws/devel/lib/knex_driver/: knex_driver_node
TX2/ARES_ws/devel/lib/pkgconfig/: data_logger.pc  inertial_sense.pc  ins_to_tf.pc  knex_driver.pc  realsense2_camera.pc  serial.pc  test_tf_broadcaster.pc
TX2/ARES_ws/devel/lib/serial/: serial_example
TX2/ARES_ws/devel/lib/test_tf_broadcaster/: test_tf_broadcaster_node
TX2/ARES_ws/src/data_logger/: CMakeLists.txt
TX2/ARES_ws/src/data_logger/log/: log_0_36_m.ods  log_0_60_m.ods  log_1_m.ods  log_2_5_m.ods  log_2_m(celing).ods  log_3_m.ods  log_3_m_2(corner_effect).ods
TX2/ARES_ws/src/data_logger/src/: data_logger_node.cpp
TX2/ARES_ws/src/ins_to_tf/: CMakeLists.txt
TX2/ARES_ws/src/ins_to_tf/src/: .ins_to_tf_node.cpp.swp  ins_to_tf_node.cpp  parameters.yaml  (+1 more)
TX2/ARES_ws/src/knex_driver/: CMakeLists.txt
TX2/ARES_ws/src/test_tf_broadcaster/: CMakeLists.txt  package.xml
navigation/: package.xml
path_planner/src/GUI/: DataManipulation.py
path_planner/src/Path-Planning/: main.cpp  path_planner.cpp  path_planner.hpp
src/: a.out  main.cpp  path_planner.cpp  path_planner.hpp
src/GUI/: DataManipulation.py  MasterGUI.py  MasterGUIMain.py  positionData.txt
src/Path-Planning/: Makefile  gradientMap.txt  path_planner.cpp  path_planner.hpp  testCaseOne.cpp
src/Path-Planning/old/src/: AStarTest.py  main.cpp  path_planner.hpp  testCostMap.txt
src/Path-Planning/src/: AStarTest.py  PathPlanner.py  debug.txt  main.cpp  main.py  path_planner.cpp  path_planner.hpp  testCaseOne.cpp  testCaseTwo.cpp  testCostMap.txt
src/joy_to_uart/: CMakeLists.txt  package.xml
src/joy_to_uart/src/: joy_reciever.cpp  joy_serial.cpp
vision/: CMakeLists.txt  README_vision.md  package.xml
vision/launch/: ball_detection.launch
vision/scripts/: bag_color_ball_detector.py  ball_depth.py  ball_detector.py
(+46 files in other folders)
