<?xml version="1.0"?>
<package format="2">
  <name>vision</name>
  <version>1.0.0</version>
  <description>The USU ARES vision package</description>
  <maintainer email="sebastian@helzer.eu">sebastian</maintainer>


  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>deque</build_depend>
  <build_depend>VideoStream</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>argparse</build_depend>
  <build_depend>imutils</build_depend>
  <build_depend>time</build_depend>



  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>opencv2</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>deque</build_export_depend>
  <build_export_depend>VideoStream</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>argparse</build_export_depend>
  <build_export_depend>imutils</build_export_depend>
  <build_export_depend>time</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>deque</exec_depend>
  <exec_depend>VideoStream</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>imutils</exec_depend>
  <exec_depend>time</exec_depend>  
  <export>

  </export>
</package>
